# DigiPen

./: .gitignore
CS120/: bytes.c  practice.c  scantext.c  spellcheck.c
CS120/arrays/: array.c  driver.c
CS120/calendar/: calendar.c
CS232/: 01_Basics.ipynb  02_Functions.ipynb  03_Conditions_Casting.ipynb  04_Loops_Recursion.ipynb  05_numpy.ipynb  06_matplotlib.ipynb  07_Pandas-Series.ipynb  08_Pandas-Dataframe-1.ipynb  09_Pandas-Dataframe-2.ipynb  12_Correlation.ipynb  13_Distributions.ipynb  14_Data_Cleaning.ipynb  15_Data_Wrangling.ipynb  16_Data_Aggregation.ipynb  17_Time_Series and Rolling Window.ipynb  18_Maps.ipynb  19_Facet_Box_Density_Plots.ipynb  21_Normalization_and_Confidence_Intervals.ipynb  22_Hypothesis_Testing.ipynb  24_Text_Analytics.ipynb  Assignment1_Luke_Tseng.ipynb  Assignment2_Luke_Tseng.ipynb  Assignment3_Luke_Tseng.ipynb  Assignment4_Luke_Tseng.ipynb  Assignment5_Luke_Tseng.ipynb  Assignment6_Luke_Tseng.ipynb  Data Types in Data Science.ipynb  Final_Project.ipynb  Maps_Google-API-key.ipynb  datatypes.csv  df_sample.csv  testload.csv
CS251/: lighting.frag  lighting.vert  object.h  transform.cpp
CS315/project-mem-debugger-flusheddog/src/MemDebugger/: CMakeLists.txt  MemDebugger.cpp
CS330/: FINAL.txt
CS376/: MnistCNNtutorial.ipynb  ProductNN.ipynb  deep_q_network_breakout.ipynb  prg1.ipynb  prg2.ipynb  prg3.ipynb  prg4.ipynb
HTML/: index.html
MAT345/: HW2.py  HW6.ipynb  HW6data.csv  HW6data2.csv  HW8.ipynb  Project1.ipynb  Project2.ipynb  Project3.ipynb  Project3_Predict.csv  Project3_Training.csv  Project4.ipynb  Project5.ipynb  clean_rollingsales_manhattan.csv  weights.txt  weights2.txt
test/: audio-keyboard.py  calculator.py  my-first-notebook.ipynb  salary.py  test.py  triangle.py  zigzag.c
(+647 files in other folders)
